--- a/Switch.API/config.json
+++ b/Switch.API/config.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SwitchDB": "Server=localhost;userid=root;password=NsaentndbtdM2019**;database=SwitchDB"
+    "SwitchDB": "Server=localhost;userid=root;password=NsaentndbtdM2019**;database=SwitchDB;"
   }
 }
